--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "material-table-builder",
   "version": "1.0.2",
   "description": "A simple utitlity to collect data for tables and bar charts. This tool was developed specifically for KLL's OLGDS project, where municipality officers wanted a way to simply input data for tables and/or graphs to be displayed on their website.",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --mode development",
