--- a/package.json
+++ b/package.json
@@ -45,8 +45,10 @@
   },
   "dependencies": {
     "c3": "^0.6.3",
-    "material-ui": "^0.20.1",
     "lodash.clonedeep": "^4.5.0",
-    "react-data-grid": "^4.0.7"
+    "material-ui": "^0.20.1",
+    "react": "^16.4.1",
+    "react-data-grid": "^4.0.7",
+    "react-dom": "^16.4.1"
   }
 }
