--- a/package.json
+++ b/package.json
@@ -46,9 +46,6 @@
   "dependencies": {
     "c3": "^0.6.3",
     "lodash.clonedeep": "^4.5.0",
-    "material-ui": "^0.20.1",
-    "react": "^16.4.1",
-    "react-data-grid": "^4.0.7",
-    "react-dom": "^16.4.1"
+    "react-data-grid": "^4.0.7"
   }
 }
